--- a/src/main/webapp/pages/Main/page.min.html
+++ b/src/main/webapp/pages/Main/page.min.html
@@ -23,15 +23,154 @@ Application.$controller("MainPageController", ["$scope", function ($scope) {
 
 }]);
 
+
+Application.$controller("livefilter1Controller", ["$scope",
+	function($scope) {
+		"use strict";
+		$scope.ctrlScope = $scope;
+	}
+]);
+
+Application.$controller("livefilter2Controller", ["$scope",
+	function($scope) {
+		"use strict";
+		$scope.ctrlScope = $scope;
+	}
+]);
+
+Application.$controller("liveform1Controller", ["$scope",
+	function($scope) {
+		"use strict";
+		$scope.ctrlScope = $scope;
+	}
+]);
 </script>
 <script id="Main.variables.json">
-var _MainPage_Variables_ ={};
+var _MainPage_Variables_ ={
+	"liveVariable1": {
+		"type": "Table1",
+		"isList": false,
+		"owner": "Page",
+		"dataSet": {
+			"dataValue": ""
+		},
+		"dataBinding": [
+			{
+				"name": "dataBinding",
+				"type": "TABLE1",
+				"fields": [
+					{
+						"name": "id",
+						"type": "number",
+						"value": "bind:Variables.MyTestDatabaseTable1Data.dataSet.data[$i].id"
+					},
+					{
+						"name": "name",
+						"type": "string",
+						"value": "bind:Variables.MyTestDatabaseTable1Data.dataSet.data[$i].name"
+					},
+					{
+						"name": "dob",
+						"type": "date"
+					}
+				]
+			}
+		],
+		"saveInPhonegap": false,
+		"firstRow": 0,
+		"maxResults": 20,
+		"designMaxResults": 10,
+		"operation": "read",
+		"startUpdate": false,
+		"autoUpdate": true,
+		"inFlightBehavior": "executeLast",
+		"transformationRequired": false,
+		"liveSource": "MyTestDatabase",
+		"ignoreCase": false,
+		"matchMode": "start",
+		"filterFields": {},
+		"category": "wm.LiveVariable",
+		"_id": "wm-liveVariable1-wm.LiveVariable-1444480205605",
+		"package": "com.test_test.mytestdatabase.Table1",
+		"tableName": "TABLE1",
+		"tableType": "TABLE",
+		"propertiesMap": {
+			"columns": [
+				{
+					"fieldName": "id",
+					"type": "integer",
+					"hibernateType": "integer",
+					"fullyQualifiedType": "integer",
+					"columnName": "ID",
+					"isPrimaryKey": true,
+					"notNull": true,
+					"length": 255,
+					"precision": 19,
+					"generator": "identity",
+					"isRelated": false,
+					"defaultValue": null
+				},
+				{
+					"fieldName": "name",
+					"type": "string",
+					"hibernateType": "string",
+					"fullyQualifiedType": "string",
+					"columnName": "Name",
+					"isPrimaryKey": false,
+					"notNull": false,
+					"length": 255,
+					"precision": 19,
+					"generator": null,
+					"isRelated": false,
+					"defaultValue": null
+				},
+				{
+					"fieldName": "dob",
+					"type": "date",
+					"hibernateType": "date",
+					"fullyQualifiedType": "date",
+					"columnName": "DOB",
+					"isPrimaryKey": false,
+					"notNull": false,
+					"length": 10,
+					"precision": 19,
+					"generator": null,
+					"isRelated": false,
+					"defaultValue": null
+				}
+			],
+			"primaryKeys": [
+				"id"
+			],
+			"entityName": "Table1",
+			"fullyQualifiedName": "com.test_test.mytestdatabase.Table1",
+			"tableType": "TABLE"
+		},
+		"bindCount": 0,
+		"name": "liveVariable1"
+	}
+}
 </script>
 <script id="Main.html" type="text/ng-template">
 <wm-page data-ng-controller="MainPageController" name="page1">
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
-            <wm-audio controls="controls" audiopreload="none" name="audio1"></wm-audio>
+            <wm-liveform title="Details" name="liveform1" dataset="bind:Variables.MyTestDatabaseTable1Data.dataSet" horizontalalign="left" formdata="bind:Variables.MyTestDatabaseTable1Data" captionalign="right" captionposition="left">
+                <wm-layoutgrid name="layoutgrid15">
+                    <wm-gridrow show="hide" name="gridrow54">
+                        <wm-gridcolumn show="show" name="gridcolumn26" columnwidth="12">
+                            <wm-form-field display-name="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" is-related="false" readonly="true" required="true" placeholder="Enter value" multiple="false" regexp=".*" step="1"></wm-form-field>
+                        </wm-gridcolumn>
+                    </wm-gridrow>
+                    <wm-gridrow show="show" name="gridrow55">
+                        <wm-gridcolumn show="show" name="gridcolumn27" columnwidth="12">
+                            <wm-form-field display-name="Name" show="true" primary-key="false" generator="null" key="name" type="string" maxvalue="255" is-related="false" readonly="false" required="false" placeholder="Enter value" multiple="false" regexp=".*"></wm-form-field>
+                        </wm-gridcolumn>
+                    </wm-gridrow>
+                </wm-layoutgrid>
+                <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="glyphicon glyphicon-remove-circle" action="cancel()" type="button" update-mode="true"></wm-form-action>
+                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="glyphicon glyphicon-save" type="Submit" update-mode="true"></wm-form-action>
+            </wm-liveform>
         </wm-page-content>
     </wm-content>
 </wm-page>
