--- a/src/main/webapp/pages/Main/page.min.html
+++ b/src/main/webapp/pages/Main/page.min.html
@@ -48,6 +48,7 @@ Application.$controller("liveform1Controller", ["$scope",
 <script id="Main.variables.json">
 var _MainPage_Variables_ ={
 	"liveVariable1": {
+		"name": "liveVariable1",
 		"type": "Table1",
 		"isList": false,
 		"owner": "Page",
@@ -146,8 +147,7 @@ var _MainPage_Variables_ ={
 			"fullyQualifiedName": "com.test_test.mytestdatabase.Table1",
 			"tableType": "TABLE"
 		},
-		"bindCount": 0,
-		"name": "liveVariable1"
+		"bindCount": 0
 	}
 }
 </script>
